2006-02-27  Christian Neumair  <chris@gnome-de.org>

        * src/xdgmimemagic.c: (_xdg_mime_magic_lookup_data): Make
        priority equality check more robust so that it works for three or more
        matches. Also allow matchlets with 0 priority.
	
2006-02-27  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-utils.c (gnome_vfs_make_uri_from_input_internal):
	Prepend file:///, not file:// for strings that doesn't start with a slash.
	Fixes #329781

2006-02-27  Alexander Larsson  <alexl@redhat.com>

	* modules/file-method.c (get_access_info):
	Slight optimization. We try to do as few access calls as possible.

2006-02-24  Alexander Larsson  <alexl@redhat.com>

	* doc/tmpl/gnome-vfs-file-info.sgml:
	* libgnomevfs/gnome-vfs-file-info.h:
	* modules/file-method.c:
	Add and implement GNOME_VFS_FILE_INFO_NAME_ONLY for readdir.

2006-02-23  Christian Neumair  <chris@gnome-de.org>

	* modules/sftp-method.c: Include <sys/time.h>. Fixes #325135.

2006-02-21  David Zeuthen  <davidz@redhat.com>

	* libgnomevfs/gnome-vfs-volume-ops.c (gnome_vfs_volume_eject)
	(gnome_vfs_volume_unmount): Get the hal_udi for from the drive if
	a volume doesn't have a hal_udi and we're using gnome-mount. This
	is the case for PC style floppy disks, IDE zip drives and other
	drives that hal cannot poll. This means we can use gnome-eject
	resp. gnome-eject for these which is necessary as we used
	gnome-mount to actually mount them (needs privs and needs to clean
	up mount point). Also fixes leaking the hal udi. This is also Red
	Hat bug #182046.

	* libgnomevfs/gnome-vfs-hal-mounts.c: Uncomment debug

2006-02-19  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/xdgmimemagic.c: (_xdg_mime_magic_lookup_data): When two
	unrelated MIME types with equal priorities match, don't assume one of
	them matches. Fixes #331719.

2006-02-18  David Zeuthen  <davidz@redhat.com>

	* libgnomevfs/gnome-vfs-volume-ops.c: Don't define the variables