@@ -1,3 +1,10 @@
+2006-02-27  Alexander Larsson  <alexl@redhat.com>
+
+	* libgnomevfs/gnome-vfs-uri.c:
+	Add g_return_val_if_fail for some arguments.
+	Add details to docs for gnome_vfs_uri_is_local.
+	Patch from Christian Neumair
+
 2006-02-27  Christian Neumair  <chris@gnome-de.org>
 
         * src/xdgmimemagic.c: (_xdg_mime_magic_lookup_data): Make
